src/test/ui/issues/issue-22706.stderr
error[E0109]: type parameters are not allowed on this type
  --> $DIR/issue-22706.rs:11:29
   |
LL | fn is_copy<T: ::std::marker<i32>::Copy>() {}
   |                             ^^^ type parameter not allowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0109`.
